plugins {
    id 'java'
    id 'jacoco'
    id 'com.github.spotbugs' version '6.1.7'
    id 'io.quarkus' version '3.36.1'
    id 'me.champeau.jmh' version '0.7.3'
    id 'org.graalvm.buildtools.native' version '0.10.4'
}

group = 'io.matrix'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    implementation enforcedPlatform('io.quarkus.platform:quarkus-bom:3.36.1')
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-micrometer-registry-prometheus'
    implementation 'io.quarkus:quarkus-opentelemetry'
    implementation 'io.quarkus:quarkus-logging-json'
    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-picocli'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-hibernate-validator'
    implementation 'io.quarkus:quarkus-websockets'
    implementation 'io.quarkus:quarkus-reactive-pg-client'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'

    implementation 'org.apache.avro:avro:1.12.0'
    implementation 'io.lettuce:lettuce-core:6.5.0.RELEASE'
    implementation 'org.apache.kafka:kafka-clients:3.9.0'

    implementation platform('org.apache.pekko:pekko-bom_2.13:1.6.0')
    implementation 'org.apache.pekko:pekko-actor-typed_2.13'
    implementation 'org.apache.pekko:pekko-serialization-jackson_2.13'
    implementation 'org.apache.pekko:pekko-slf4j_2.13'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'org.assertj:assertj-core:3.26.0'
    testImplementation 'org.apache.pekko:pekko-actor-testkit-typed_2.13'
    testImplementation 'io.quarkus:quarkus-jdbc-postgresql'
    testImplementation 'io.quarkus:quarkus-jdbc-h2'
    testImplementation 'io.quarkus:quarkus-test-vertx'
    testImplementation 'org.testcontainers:testcontainers:1.21.3'
    testImplementation 'org.testcontainers:kafka:1.21.3'
    testImplementation 'org.testcontainers:postgresql:1.21.3'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
}

tasks.withType(Test) {
    useJUnitPlatform()
    // Exclude integration tests from default test run (requires Docker)
    if (!project.hasProperty('includeIntegration')) {
        exclude '**/integration/**'
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                'io/matrix/MatrixApplication*',
                'io/matrix/MatrixSimulation*',
                'io/matrix/SystemDemo*',
                'io/matrix/MinecraftExperiment*',
                'io/matrix/MatrixTopCommand*',
                'io/matrix/cli/**'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.82
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                'io/matrix/MatrixApplication*',
                'io/matrix/MatrixSimulation*',
                'io/matrix/SystemDemo*',
                'io/matrix/MinecraftExperiment*',
                'io/matrix/MatrixTopCommand*',
                'io/matrix/cli/**'
            ])
        }))
    }
}

// ─── SpotBugs Static Analysis ───
spotbugs {
    effort = com.github.spotbugs.snom.Effort.DEFAULT
    reportLevel = com.github.spotbugs.snom.Confidence.valueOf('MEDIUM')
    excludeFilter = file('config/spotbugs/exclude.xml')
}

spotbugsMain {
    reports {
        xml.required = true
        html.required = true
    }
}

// ─── JMH Benchmark Configuration ───
jmh {
    jmhVersion = '1.37'
    duplicateClassesStrategy = DuplicatesStrategy.EXCLUDE
    // Default benchmark: PerformanceBenchmark (all critical paths)
    // Override with: ./gradlew :matrix-core:jmh -PjmhBenchmark=NeuronBenchmark
    if (project.hasProperty('jmhBenchmark')) {
        includes = [project.jmhBenchmark]
    }
    // Result output format
    resultFormat = 'JSON'
    // Warmup and measurement defaults (overridden by annotations)
    warmupIterations = 5
    iterations = 10
    fork = 2
    // Profiling
    if (project.hasProperty('jmhProfiler')) {
        profilers = [project.jmhProfiler]
    }
}

// Custom task: run benchmarks and generate report
tasks.register('jmhReport', JavaExec) {
    dependsOn jmh
    group = 'benchmark'
    description = 'Run JMH benchmarks and generate performance report'
    classpath = sourceSets.jmh.runtimeClasspath
    mainClass = 'io.matrix.benchmark.PerformanceReport'
}

tasks.register('runMinecraftExperiment', JavaExec) {
    dependsOn jar
    group = 'application'
    description = 'Runs MinecraftExperiment sandbox'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'io.matrix.MinecraftExperiment'
}

// ─── GraalVM Native Image ───
// Container build (recommended): ./gradlew :matrix-core:buildNative
// Local build:                    ./gradlew :matrix-core:build -Dquarkus.package.type=native
// Requires: GraalVM 25+ or Mandrel 24.x (container), native-image installed
// Note:    Native build args set via application.properties + native-image.properties

graalvmNative {
    binaries {
        main {
            imageName = 'matrix-core'
            mainClass = 'io.matrix.MatrixApplication'
            javaLauncher = javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(25)
            }
            buildArgs.addAll(
                '-H:+ReportExceptionStackTraces',
                '--enable-url-protocols=http,https',
                '-H:+AddAllCharsets',
                '-J-Xmx8g',
                '--no-fallback',
                '-H:+RemoveSaturatedTypeFlows',
                '--initialize-at-build-time=org.jboss.logmanager',
                '--initialize-at-build-time=org.slf4j',
                '--initialize-at-build-time=io.netty',
                '--initialize-at-build-time=com.fasterxml',
                '--initialize-at-build-time=io.smallrye',
                '--initialize-at-build-time=org.apache.avro',
                '--initialize-at-build-time=io.lettuce',
                '--initialize-at-build-time=org.apache.kafka',
                '--initialize-at-run-time=io.matrix.cluster.NeuronClusterActor',
                '--initialize-at-run-time=org.apache.pekko',
                '--initialize-at-run-time=io.matrix.events.R2dbcEventJournal',
                '--initialize-at-run-time=io.vertx.mutiny'
            )
        }
    }
}

// Native build via Mandrel container (recommended for CI/CD)
tasks.register('buildNativeContainer', Exec) {
    group = 'native'
    description = 'Build GraalVM native image via Quarkus + Mandrel container'
    workingDir = projectDir
    commandLine './gradlew', ':matrix-core:quarkusBuild',
            '-Dquarkus.native.enabled=true',
            '-Dquarkus.package.type=native',
            '-Dquarkus.native.container-build=true',
            '-Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder:24.1.0-java21',
            '--no-daemon'
}

// Local native build (requires GraalVM/Mandrel installed locally)
tasks.register('buildNativeLocal', Exec) {
    group = 'native'
    description = 'Build GraalVM native image locally (requires GraalVM/Mandrel)'
    workingDir = projectDir
    commandLine './gradlew', ':matrix-core:quarkusBuild',
            '-Dquarkus.native.enabled=true',
            '-Dquarkus.package.type=native',
            '--no-daemon'
}

// Run native binary
tasks.register('runNative', Exec) {
    dependsOn 'buildNative'
    group = 'native'
    description = 'Run the native binary'
    workingDir = projectDir
    commandLine "${project.layout.buildDirectory.get()}/matrix-core-${project.version}-runner"
}

// nativeTest is provided by GraalVM plugin as NativeRunTask

tasks.register('nativeReflectionTest', Test) {
    group = 'native'
    description = 'Run native image reflection tests (JVM mode)'
    useJUnitPlatform {
        includeTags 'native-image'
    }
    include 'io/matrix/nativeimage/**'
}

// Native image smoke test (requires native binary)
tasks.register('nativeSmokeTest', Test) {
    group = 'native'
    description = 'Run native image smoke tests'
    dependsOn 'buildNative'
    useJUnitPlatform {
        includeTags 'native'
    }
    include 'io/matrix/NativeSmokeTest*'
    // Disable JVM tests — these run against the native binary
    enabled = false
}

// Native image compilation test (JVM mode, validates config)
tasks.register('nativeCompilationTest', Test) {
    group = 'native'
    description = 'Run native image compilation validation tests (JVM mode)'
    useJUnitPlatform {
        includeTags 'native-compilation'
    }
    include 'io/matrix/nativeimage/**'
}

